# spectraqc

./: .gitignore  6.0  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  RELEASE_README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLI_REFERENCE.md  ONBOARDING_WORKSHOP.md  SpectraQC_V1_Full_Implementation.md  USER_GUIDE.md  V2_SCOPE.md  corpus_manifest_v1.schema.json  profile_versioning.md  reference_profile_v1.schema.json  reference_profile_v2.schema.json
docs/marketing/: spectraqc_pitch.html
scripts/: build_dev_ref.py  build_exe.py  build_release.py  synth_vectors.py
spectraqc/: __init__.py  types.py
spectraqc/algorithms/: __init__.py  registry.py
spectraqc/analysis/: __init__.py  bands.py  ltpsd.py
spectraqc/cli/: __init__.py  main.py
spectraqc/corpus/: __init__.py  manifest.py
spectraqc/dsp/: __init__.py  psd.py  repair.py  windowing.py
spectraqc/gui/: __init__.py  server.py
spectraqc/io/: __init__.py  audio.py  policy.py
spectraqc/metrics/: __init__.py  balance.py  brickwall.py  broadband_transients.py  channel_consistency.py  clipping.py  correlation.py  deviation.py  dr.py  grid.py  integration.py  level_anomalies.py  levels.py  loudness.py  noise.py  peak_anomalies.py  silence.py  smoothing.py  tilt.py  tonal.py  transient_spikes.py  truepeak.py
spectraqc/profiles/: __init__.py  builder.py  loader.py  validator.py
spectraqc/reporting/: __init__.py  alerts.py  batch_summary.py  qcreport.py
spectraqc/thresholds/: __init__.py  brickwall.py  broadband_transients.py  channel_consistency.py  evaluator.py  inter_channel_delay.py  level_anomalies.py  (+4 more)
tests/: conftest.py  test_batch_summary.py  test_cli_helpers.py  test_cli_repair.py  test_corpus_manifest.py  test_dsp_psd.py  test_dsp_repair.py  test_io_audio.py  test_metrics_core.py  test_metrics_smoothing.py  test_metrics_truepeak_loudness.py  test_profiles.py  test_reporting.py  test_thresholds.py  test_utils.py  test_viewport_js_helper.py
(+7 files in other folders)
