[project]
name = "spectraqc"
version = "0.1.0"
description = "Spectral QC tool (V1 CLI)"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "soundfile>=0.12.1",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
spectraqc = "spectraqc.cli.main:main"

[tool.setuptools.packages.find]
include = ["spectraqc*"]
